--- a/startpg.html
+++ b/startpg.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+        <meta http-equiv="refresh" content="0; url=startpg.html">
+    <script type="text/javascript">
+        window.location.href = "startpg.html";
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PresentPerfect.com</title>
