--- a/startpg.html
+++ b/startpg.html
@@ -738,7 +738,7 @@
 
         // Open chatbot.html when the popup message is clicked
         popupMessage.addEventListener('click', function() {
-            window.location.href = 'chatbot.html';
+            window.location.href = 'D:/ProComp/chatbot.html';
         });
     });
 </script>
